--- a/style/style.css
+++ b/style/style.css
@@ -483,10 +483,16 @@ html, body {
 }
 
 /* linechart styles */
-.linechart {
+.graph-title {
+  font-weight: bold;
+  padding-top: 10px;
+}
+
+.linechart .recharts-wrapper {
   text-align: center;
   margin-left: auto;
   margin-right: auto;
+  padding-top: 20px;
 }
 
 .react-calendar-heatmap text {
