--- a/style/style.css
+++ b/style/style.css
@@ -232,7 +232,7 @@ html, body {
   margin-left: 100%%;
 }
 
-#filter #entry-filter{
+#entry-filter{
   overflow-y: scroll;
   height: 25vh;
   margin-bottom: 10px;
@@ -310,7 +310,7 @@ html, body {
 }
 
 /* Personal-info styles */
-#profile-page-container #personal-info-container {
+#personal-info-container {
   padding-top: 20px;
   text-align: center;
 }
@@ -333,17 +333,17 @@ html, body {
   text-align: center;
 }
 
-.list-group .list-group-item {
+#tag-list .list-group-item {
   border-left: 0px;
   border-right: 0px;
 }
 
-.list-group > .tag-list-item {
+#tag-list > .tag-list-item {
   text-align: center;
   font-weight: bold;
 }
 
-.list-group > .tag-list-item:hover {
+#tag-list > .tag-list-item:hover {
   background-color: rgba(211,211,211, 0.5);
   cursor: pointer;
 }
