--- a/style/style.css
+++ b/style/style.css
@@ -819,6 +819,7 @@ input[type="checkbox"]:focus{
 
 /* Subhead styles */
 #summary-view .subhead {
+  font-weight:bold;
   border-bottom: 1px solid rgba(211,211,211, 0.5);
 }
 
@@ -833,47 +834,57 @@ input[type="checkbox"]:focus{
   height: 30vh;
 }
 
+#heatmap-entries {
+  overflow-y: scroll;
+  height: 20vh;
+  animation: fadein 3s;
+  margin-bottom: 20px;
+}
+
 #recent-activity-dropdown {
   font-size: 10px;
   float: right;
 }
 
-#recent-activity .entry-item-container {
+#recent-activity .entry-item-container, #heatmap-entries .entry-item-container {
   border-bottom: 1px solid rgba(211,211,211, 0.5);
   margin-top: 5px;
   margin-bottom: 5px;
 }
 
-#recent-activity .entry-item-container .entry-text * {
+#recent-activity .entry-item-container .entry-text *, #heatmap-entries .entry-item-container .entry-text *{
   font-size: 12px;
 }
 
-#recent-activity .entry-item-container a {
+#recent-activity .entry-item-container a, #heatmap-entries .entry-item-container a {
   color: black;
   text-decoration: none;
 }
 
-#recent-activity .entry-item-container:hover {
+#recent-activity .entry-item-container:hover, #heatmap-entries .entry-item-container:hover {
   background-color: rgba(211,211,211, 0.5);
 }
 
-#recent-activity .entry-header {
+#recent-activity .entry-header, #heatmap-entries .entry-header {
   margin-bottom: 5px;
   font-size: 14px;
 }
 
-#recent-activity .entry-date {
+#recent-activity .entry-date, #heatmap-entries .entry-date {
   display: inline-block;
-  text-align: left;
   font-weight: bold;
+  width: 100%;
+  margin-bottom: 5px;
 }
 
-#recent-activity .tag-container {
+#recent-activity .tag-container, #heatmap-entries .tag-container {
   float: right;
   font-size: 14px;
+  width: 100%;
+  margin-bottom: 10px;
 }
 
-#recent-activity .tag-container .entry-tag {
+#recent-activity .tag-container .entry-tag, #heatmap-entries .tag-container .entry-tag {
   background-color: #0EBFE9;
   border-radius: 4px;
   color: white;
@@ -881,7 +892,7 @@ input[type="checkbox"]:focus{
   padding: 2px 4px;
 }
 
-#recent-activity .tag-container .entry-tag:hover {
+#recent-activity .tag-container .entry-tag:hover, #heatmap-entries .tag-container .entry-tag:hover  {
   font-weight: bold;
 }
 
