--- a/style/style.css
+++ b/style/style.css
@@ -755,6 +755,14 @@ input[type="checkbox"]:focus{
   border-bottom: 1px solid rgba(211,211,211, 0.5);
 }
 
+#heatmap-entries {
+  overflow-y: scroll;
+  height: 20vh;
+  animation: fadein 3s;
+  margin-bottom: 20px;
+  border-bottom: 1px solid rgba(211,211,211, 0.5);
+}
+
 .react-calendar-heatmap text {
   font-size: 13px;
   fill: #aaa;
@@ -818,15 +826,25 @@ input[type="checkbox"]:focus{
 }
 
 /* Subhead styles */
-#summary-view .subhead {
+#heatmap-and-entries .subhead {
   font-weight:bold;
   border-bottom: 1px solid rgba(211,211,211, 0.5);
 }
 
 /*Recent Activity Styles */
 #recent-activity-container {
-    border: 1px solid rgba(211,211,211, 0.5);
-    margin-bottom: 30px;
+  border-top: 1px solid rgba(211,211,211, 0.5);
+  margin-bottom: 30px;
+}
+
+#recent-activity-header {
+  display: flex;
+  height: 30px;
+  justify-content: center;
+  position: relative;
+  font-weight:bold;
+  border-bottom: 1px solid rgba(211,211,211, 0.5);
+  margin-bottom: 5px;
 }
 
 #recent-activity {
@@ -834,16 +852,11 @@ input[type="checkbox"]:focus{
   height: 30vh;
 }
 
-#heatmap-entries {
-  overflow-y: scroll;
-  height: 20vh;
-  animation: fadein 3s;
-  margin-bottom: 20px;
-}
-
 #recent-activity-dropdown {
   font-size: 10px;
-  float: right;
+  height: 2vh;
+  position: absolute;
+  right: 2px;
 }
 
 #recent-activity .entry-item-container, #heatmap-entries .entry-item-container {
@@ -854,6 +867,8 @@ input[type="checkbox"]:focus{
 
 #recent-activity .entry-item-container .entry-text *, #heatmap-entries .entry-item-container .entry-text *{
   font-size: 12px;
+  text-align: left;
+  margin-left: 10px;
 }
 
 #recent-activity .entry-item-container a, #heatmap-entries .entry-item-container a {
