--- a/style/style.css
+++ b/style/style.css
@@ -276,6 +276,12 @@ html, body {
   font-weight: bold;
   color: #0EBFE9;
 }
+
+/* Modal styles */
+.modal, .modal-open {
+  display: block;
+}
+
 /* SharedEntry styles */
 #shared-entry-view {
   height: 100vh;
