--- a/style/style.css
+++ b/style/style.css
@@ -56,7 +56,7 @@ html, body {
 }
 
 #entry-form .entry-form-title {
-  font-size: 20px;
+  font-size: 25px;
   font-weight: 300;
 }
 
@@ -943,5 +943,36 @@ input[type="checkbox"]:focus{
 /* LoginPage styles */
 #login-page {
   height: 100vh;
-  background-color: #f7f7f7;
+  background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);
+}
+
+#login-form {
+  margin-top: 25vh;
+  padding: 30px;
+  background-color: rgba(119, 229, 255, 0.5);
+  border-radius: 20px;
+  width: 30%;
+}
+
+#login-page .devjournal-title {
+  color: white;
+  font-family: "Arial Black";
+  text-align: center;
+  font-weight: bold;
+  font-size: 30px;
+  margin-bottom: 30px;
+}
+
+#login-page .login-input {
+  margin-bottom: 20px;
+}
+
+#login-page .entry-field {
+  color: white;
+  font-weight: normal;
+}
+
+#login-page .remember-me {
+  color: white;
+  margin-bottom: 20px;
 }
