--- a/style/style.css
+++ b/style/style.css
@@ -950,8 +950,8 @@ input[type="checkbox"]:focus{
   margin-top: 25vh;
   padding: 30px;
   background-color: rgba(119, 229, 255, 0.5);
-  border-radius: 20px;
-  width: 30%;
+  width: 25%;
+  box-shadow: 3px 3px 5px black;
 }
 
 #login-page .devjournal-title {
