--- a/style/style.css
+++ b/style/style.css
@@ -947,10 +947,11 @@ input[type="checkbox"]:focus{
 }
 
 #login-form {
-  margin-top: 25vh;
+  position: relative;
+  top: 50%;
+  transform: translateY(-50%);
   padding: 30px;
   background-color: rgba(119, 229, 255, 0.5);
-  width: 25%;
   box-shadow: 3px 3px 5px black;
 }
 
