--- a/style/style.css
+++ b/style/style.css
@@ -144,6 +144,8 @@ html, body {
 #entry-view {
   padding-left: 50px;
   margin-top: 30px;
+  height: 100vh;
+  overflow-y: scroll;
 }
 
 #entry-view-list {
