after code review by James

--- a/style/style.css
+++ b/style/style.css
@@ -80,6 +80,7 @@ html, body {
   color: darkslategray;
 }
 
+/* Markdown Preview styles */
 #markdown-preview {
   max-height: 250px;
   overflow-y: scroll;
