--- a/style/style.css
+++ b/style/style.css
@@ -222,8 +222,9 @@ html, body {
     background: -webkit-linear-gradient(rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
 }
 
+/* TODO: Make this effect better */
 #entry-view-list .entry-view-item:hover {
-  padding-right: 5px;
+  color: #0EBFE9;
   cursor: pointer;
 }
 
