--- a/style/style.css
+++ b/style/style.css
@@ -2,6 +2,7 @@ html, body {
   height: 100%;
   font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
   font-weight: 300;
+  overflow: hidden;
 }
 
 .container {
@@ -236,6 +237,12 @@ html, body {
   color: #0EBFE9;
 }
 
+/* JournalPage stles */
+#journal-page-container {
+  height: 100vh;
+  background-color: #fafafa;
+}
+
 /* EntryForm styles */
 #entry-form {
   margin: 0 15px 15px 15px;
@@ -287,9 +294,6 @@ html, body {
   max-height: 8em;
   overflow: hidden;
   /* TODO: Make this better */
-  border-left: 4px solid #f7f7f7;
-  border-top: 4px solid #f7f7f7;
-  border-right: 4px solid #f7f7f7;
 }
 
 #entry-list .entry-item-container .entry-text * {
@@ -299,11 +303,6 @@ html, body {
 #entry-list .entry-item-container a {
   color: black;
   text-decoration: none;
-}
-
-#entry-list .entry-item-container:hover {
-  border-right: 6px solid #0EBFE9;
-  background-color: #f3f3f3;
 }
 
 #entry-list .entry-header {
@@ -334,8 +333,10 @@ html, body {
 /* EntryView styles */
 #entry-view {
   padding-left: 50px;
-  margin-top: 30px;
+  padding-top: 30px;
   overflow-y: scroll;
+  background-color: white;
+  border-right: 1px solid #f1f1f1
 }
 
 #entry-view .glyphicon {
@@ -358,29 +359,65 @@ html, body {
   margin-top: 30px;
 }
 
-/* Detailed View */
+/*Single Entry View*/
+#single-entry-view {
+  height: 100vh;
+  overflow-y: scroll;
+}
 
+#single-entry-view .entry-view-item {
+  padding-bottom: 200px;
+}
+
+#single-entry-view .entry-view-item .date-text {
+  text-align: center;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-bottom: 0;
+  padding-top: 30px;
+}
+
+#single-entry-view .entry-view-item .action-bar {
+  font-size: 1.35em;
+  text-align: center;
+}
+
+#single-entry-view .entry-view-item .action-bar span {
+  color: #A9A9A9;
+  margin: 0 10px 0 10px;
+}
+
+#single-entry-view .entry-view-item .action-bar span:hover {
+  color: #0EBFE9;
+}
+
+#single-entry-view.shared-link-container {
+  text-align: center;
+}
+
+/* Detailed View */
 #entry-view-detailed-list {
   height: 100vh;
   overflow-y: scroll;
 }
 
-#entry-view-detailed-list .entry .date-and-text {
-  padding: 15px 0 15px 0;
-  border-bottom: 3px solid #f7f7f7;
-  overflow-y: hidden;
-  height: 30vh;
+#entry-view-detailed-list .entry-view-item {
+  margin-right: 50px;
 }
 
-#entry-view-detailed-list .fadeout {
-    position: relative;
-    bottom: 4em;
-    height: 4em;
-    background: -webkit-linear-gradient(rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 1) 100%);
-}
-
-/* TODO: Make this effect better */
 #entry-view-detailed-list .entry-view-item:hover {
+  cursor: pointer;
+}
+
+#entry-view-detailed-list .entry-view-item .date-text {
+  text-align: center;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-bottom: 0;
+  padding-top: 30px;
+}
+
+#entry-view-detailed-list .entry-view-item:hover .date-text {
   color: #0EBFE9;
   cursor: pointer;
 }
@@ -389,45 +426,48 @@ html, body {
   margin: auto;
   margin-top: -40px;
   text-align: left;
+  display: inline;
 }
 
-#entry-view #entry-view-detailed-list .entry-view-item {
-  margin-right: 50px;
-}
-
-#entry-view #entry-view-detailed-list #entry-view-detailed-list .entry-view-item .action-bar {
+#entry-view-detailed-list .entry-view-item .action-bar {
   font-size: 1.35em;
   text-align: center;
 }
 
-#entry-view #entry-view-detailed-list .entry-view-item .action-bar span {
+#entry-view-detailed-list .entry-view-item .action-bar span {
   color: #A9A9A9;
   margin: 0 10px 0 10px;
 }
-#entry-view #entry-view-detailed-list .entry-view-item .action-bar span:hover {
+
+#entry-view-detailed-list .entry-view-item .action-bar span:hover {
   color: #0EBFE9;
 }
 
-#entry-view #entry-view-detailed-list .shared-link-container {
+#entry-view-detailed-list .shared-link-container {
   text-align: center;
 }
 
-#entry-view #entry-view-detailed-list .date-text {
-  text-align: center;
-  font-weight: bold;
-  text-transform: uppercase;
-  margin-bottom: 0;
-  padding-top: 30px;
-}
-
-#entry-view #entry-view-detailed-list .entry-text {
+#entry-view-detailed-list .entry-text {
   margin-top: 30px;
+  margin-bottom: 10px;
   font-weight: lighter;
   font-size: 12pt;
+  overflow-y: hidden;
+  height: 200px;
+  position: relative;
+}
+
+#entry-view-detailed-list .entry .entry-text::after {
+  content: '';
+  position: absolute;
+  top: 140px;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
 }
 
 /* Simple View */
-
 #entry-view-simple-list {
   margin-top: 50px;
   height: 100vh;
@@ -518,60 +558,6 @@ html, body {
   opacity: 1;
 }
 
-/* EntryViewList styles */
-#entry-view-detailed-list {
-  height: 100vh;
-  overflow-y: scroll;
-}
-
-#entry-view-detailed-list .entry-expanded {
-  height: 100vh;
-  overflow-y: scroll;
-}
-
-#entry-view-detailed-list .entry-view-item .entry {
-  padding-bottom: 30px;
-  border-bottom: 1px solid #f7f7f7;
-}
-
-#entry-view-detailed-list .entry-view-item:hover {
-  color: #0EBFE9;
-  cursor: pointer;
-}
-
-#entry-view-detailed-list .entry .entry-text {
-  overflow-y: hidden;
-  height: 65px;
-  position: relative;
-  margin-bottom: 10px;
-}
-
-#entry-view-detailed-list .entry .entry-text::after {
-  content: '';
-  position: absolute;
-  top: 15px;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: linear-gradient(rgba(255, 255, 255, 0), rgba(255, 255, 255, 1));
-}
-
-#entry-view-detailed-list .entry-view-item:hover {
-  cursor: pointer;
-}
-
-#entry-view-detailed-list .tag-container {
-  margin: auto;
-  text-align: left;
-  display: inline;
-}
-
-#entry-view-detailed-list .resize-entry {
-  font-size: 1.75em;
-  color: #0EBFE9;
-  float: right;
-}
-
 /* EntrySearch styles */
 #entry-search {
   margin-top: 15px;
@@ -592,7 +578,7 @@ html, body {
 
 #entry-filter {
   overflow-y: hidden;
-  margin-bottom: 10px;
+  padding-bottom: 10px;
 }
 
 #entry-filter .sub-heading {
@@ -601,18 +587,27 @@ html, body {
   color: #b3b3b3;
 }
 
+#entry-filter .filter-list-item {
+  padding-top: 8px;
+}
+
+#entry-filter .filter-list-item p {
+  display: inline-block;
+  padding-left: 8px;
+}
+
+#entry-filter .filter-list-item:hover {
+  background-color: #ffffff;
+  border: 1px solid #f1f1f1;
+  cursor: pointer;
+}
+
 #entry-filter ul {
   list-style: none;
-  padding: 0;
   max-height: 100px;
   overflow-y: scroll;
   font-size: 10pt;
-}
-
-.filter-list-item .filter-tag:hover {
-  padding-right: 5px;
-  background-color: #f3f3f3;
-  cursor: pointer;
+  padding-left: 0;
 }
 
 /* Filter Tag Styles */
@@ -695,7 +690,8 @@ html, body {
 }
 
 #folder-list .folder-list-item .glyphicon,
-#action-list .action-list-item .glyphicon {
+#action-list .action-list-item .glyphicon,
+#entry-filter .filter-list-item .glyphicon {
   color: #b3b3b3;
 }
 
@@ -789,6 +785,8 @@ html, body {
   height: 100vh;
   background-color: #ffffff;
   border-right: 1px solid #f1f1f1;
+  overflow-y: scroll;
+  padding-bottom: 50px;
 }
 
 #task-list {
@@ -972,9 +970,14 @@ input[type="checkbox"]:focus{
   display: none;
 }
 
+/*Profile Page*/
+#profile-page-container {
+  background-color: #fafafa;
+  height: 100vh;
+}
+
 /*User Profile*/
 #user-profile {
-  height: 100vh;
   background-color: #fafafa;
   border-right: 1px solid #f1f1f1;
 }
@@ -994,6 +997,16 @@ input[type="checkbox"]:focus{
 
 #personal-info {
   text-align: center;
+}
+
+/* Profile View */
+#profile-page-container #profile-view {
+  background-color: #ffffff;
+  border-right: 1px solid #f1f1f1;
+  text-align: center;
+  padding-top: 10px;
+  height: 100vh;
+  overflow-y: scroll;
 }
 
 /* Top Tags styles */
@@ -1029,12 +1042,7 @@ input[type="checkbox"]:focus{
 }
 
 /* stats table stats */
-#profile-page-container #stats-container {
-  text-align: center;
-  margin-top: 10px;
-}
-
-#stats-container #stats-bar {
+#profile-view #stats-bar {
   float: none;
   margin-left: auto;
   margin-right: auto;
@@ -1067,7 +1075,7 @@ input[type="checkbox"]:focus{
 }
 
 /* Time Bar */
-#stats-container #time-bar {
+#profile-view # #time-bar {
   float: none;
   margin-left: auto;
   margin-right: auto;
@@ -1076,7 +1084,7 @@ input[type="checkbox"]:focus{
   margin-bottom: 20px;
 }
 
-#stats-container .time-bar-item {
+#profile-view .time-bar-item {
   display: inline-block;
   padding-top : 10px;
   margin-right: 25px;
@@ -1084,7 +1092,7 @@ input[type="checkbox"]:focus{
   font-size: 20px;
 }
 
-#stats-container .time-bar-item:hover {
+#profile-view .time-bar-item:hover {
   color: rgba(211,211,211, 0.5);
   border-bottom: 1px solid #0EBFE9;
   cursor: pointer;
@@ -1100,7 +1108,7 @@ input[type="checkbox"]:focus{
 }
 
 /* Summary View */
-#stats-container #summary-view {
+#profile-view #summary-view {
     margin-top: 25px;
     font-size: 21px;
     text-align: center;
